fixed some spacing issue

--- a/src/AllTheme/SmilingRock/Components/Pages/Home/NewArrival/PromotionBanner2.modul.scss
+++ b/src/AllTheme/SmilingRock/Components/Pages/Home/NewArrival/PromotionBanner2.modul.scss
@@ -2,7 +2,6 @@
 
 
 .smr_NewArrivalMain {
-    padding-top: 4%;
    
 
     .smilingBridesMain {
